Prevent the fes being cut off on mobile

--- a/src/css/site/_layout.scss
+++ b/src/css/site/_layout.scss
@@ -4,29 +4,25 @@ html {
 }
 .body {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin: 0;
-    padding: $space;
+    padding: 5vh $space;
     width: 100%;
     height: 100%;
     background: $page-bg;
 
     @media (min-width: $large) {
-        padding: $space--lg;
+        padding: 5vh $space--lg;
     }
 }
 
-.header {
-    display: block;
-    margin: 0 auto;
+.page {
+    margin: auto;
 }
 
 .main {
-    margin-bottom: 15vh;
     width: 100%;
     max-width: 450px;
+    margin: 0 auto;
 }
 
 .visually-hidden {
